# rust-box

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: README.md  architecture.md  crisp-protocol.md  cryptography.md  sync-engine.md  transport.md
migrations/: 001_initial.sql  002_add_username_salt.sql
rustbox-cli/: Cargo.toml
rustbox-cli/src/: main.rs
rustbox-cli/src/commands/: delete.rs  download.rs  files.rs  init.rs  login.rs  mod.rs  status.rs  sync.rs  upload.rs
rustbox-cli/src/platform/: mod.rs  native_clock.rs  native_random.rs
rustbox-cli/src/storage/: local_fs.rs  mod.rs  sqlite_meta.rs
rustbox-cli/src/transport/: crisp_client.rs  mod.rs  quic.rs
rustbox-core/: Cargo.toml
rustbox-core/src/: constants.rs  error.rs  lib.rs
rustbox-core/src/chunking/: assembler.rs  mod.rs  pipeline.rs  splitter.rs
rustbox-core/src/crisp/: cipher.rs  handshake.rs  keys.rs  mod.rs  record.rs
rustbox-core/src/crypto/: aes_gcm.rs  chacha20.rs  ecdh.rs  ecdsa.rs  hkdf.rs  key_hierarchy.rs  mod.rs  pbkdf2.rs
rustbox-core/src/manifest/: file_manifest.rs  mod.rs  serialization.rs  sync_manifest.rs
rustbox-core/src/merkle/: diff.rs  mod.rs  proof.rs  tree.rs
rustbox-core/src/sync/: conflict.rs  engine.rs  mod.rs
rustbox-core/src/traits/: clock.rs  mod.rs  random.rs  storage.rs  transport.rs
rustbox-server/: Cargo.toml
rustbox-server/src/: certs.rs  config.rs  error.rs  main.rs  state.rs
rustbox-server/src/api/: auth.rs  chunks.rs  db.rs  manifests.rs  mod.rs  sync.rs
rustbox-server/src/db/: blobs.rs  manifests.rs  mod.rs  pool.rs  users.rs
rustbox-server/src/quic/: crisp_server.rs  handler.rs  listener.rs  mod.rs
rustbox-server/src/session/: mod.rs  store.rs
rustbox-ui/: index.html
rustbox-ui/css/: components.css  main.css  toasts.css
rustbox-ui/js/: adapter.js  app.js  auth.js  auto-sync.js  database.js  file-manager.js  toast.js  utils.js
rustbox-wasm/: Cargo.toml  assets  index.html  rustbox-ui  serve.html  style.css  worker.js
rustbox-wasm/src/: lib.rs
rustbox-wasm/src/platform/: mod.rs  wasm_clock.rs  wasm_random.rs
rustbox-wasm/src/storage/: indexeddb.rs  mod.rs
rustbox-wasm/src/transport/: fetch.rs  mod.rs
rustbox-wasm/src/worker/: crypto_worker.rs  mod.rs
test/: start-dev.sh  stop-dev.sh  test-cli.sh
