[package]
name = "rustbox-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustbox"
path = "src/main.rs"

[dependencies]
rustbox-core = { path = "../rustbox-core" }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
rpassword = "7"
indicatif = "0.17"
getrandom = "0.2"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
