[package]
name = "rustbox-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
elliptic-curve = { version = "0.13", features = ["ecdh", "sec1"] }
digest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
hex = "0.4"
async-trait = "0.1"
bytes = "1.0"
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
getrandom = "0.2"

[features]
default = []
wasm = ["getrandom"]
