[package]
name = "rustbox-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rustbox-core = { path = "../rustbox-core" }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
getrandom = "0.2"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
