[package]
name = "rustbox-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustbox-core = { path = "../rustbox-core", features = ["wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Request", "RequestInit", "RequestMode", "Response", "Headers",
    "console", "Worker", "MessageEvent", "Crypto", "SubtleCrypto",
    "IdbFactory", "IdbDatabase", "IdbObjectStore", "IdbRequest",
    "IdbTransaction", "IdbTransactionMode", "IdbOpenDbRequest",
    "IdbVersionChangeEvent", "IdbObjectStoreParameters",
    "Event", "EventTarget", "DomStringList", "DomException",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
async-trait = "0.1"
hex = "0.4"
sha2 = "0.10"
futures-channel = "0.3"
